Bug 286256 - Request to move Restart icon to core debug framework

--- a/org.eclipse.debug.examples.ui/plugin.xml
+++ b/org.eclipse.debug.examples.ui/plugin.xml
@@ -204,6 +204,14 @@
 			<adapter type="org.eclipse.debug.ui.actions.IRunToLineTarget"/>
 <!--#endif -->
       </factory>
+      <factory
+            adaptableType="org.eclipse.debug.examples.core.pda.model.PDADebugElement"
+            class="org.eclipse.debug.examples.ui.pda.adapters.CommandAdapterFactory">
+         <adapter
+               type="org.eclipse.debug.core.commands.IRestartHandler">
+         </adapter>
+      </factory>
+-->
 <!-- FLEXIBLE HIERARCHY EXAMPLE
       <factory
             adaptableType="org.eclipse.debug.examples.core.pda.model.PDADebugTarget"
