--- a/org.eclipse.debug.ui/plugin.properties
+++ b/org.eclipse.debug.ui/plugin.properties
@@ -197,9 +197,11 @@ ActionDefinition.stepOver.description= Step over
 ActionDefinition.stepReturn.name= Step Return
 ActionDefinition.stepReturn.description= Step return
 
+ActionDefinition.restart.name=Restart
+ActionDefinition.restart.description=Restart a process or debug target without terminating and re-launching
+
 ActionDefinition.resume.name=Resume
 ActionDefinition.resume.description=Resume
-
 
 ActionDefinition.runToLine.name=Run to Line
 ActionDefinition.runToLine.description=Resume and break when execution reaches the current line
