--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
@@ -174,6 +174,8 @@ StepOverAction_3=Step Over
 LaunchAction_0=Remove Configuration
 LaunchAction_1=Are you sure you want to remove {0} from the launch history?
 LaunchAction_2=&Do not ask me again.
+RestartCommandAction__text=Restart
+RestartCommandAction_tooltip=Restart
 ResumeAction_0=Resu&me
 ResumeAction_3=Resume
 DisconnectAction_0=Disconn&ect
