--- a/tests/org.eclipse.ui.tests.navigator/plugin.xml
+++ b/tests/org.eclipse.ui.tests.navigator/plugin.xml
@@ -269,7 +269,7 @@
             id="org.eclipse.ui.tests.navigator.testContentOverridden1" 
             name="Test Content Overridden 1 (Red)"
             contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
-            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderRed"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderStyledRed"
             priority="lower">
          <triggerPoints>
             <instanceof
@@ -282,7 +282,7 @@
             id="org.eclipse.ui.tests.navigator.testContentOverride1" 
             name="Test Content Override 1 (Label only - Green)"
             contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
-            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderGreen"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderStyledGreen"
             priority="lower">
          <triggerPoints>
             <instanceof
@@ -290,6 +290,33 @@
             </instanceof>
          </triggerPoints>
 		<override suppressedExtensionId="org.eclipse.ui.tests.navigator.testContentOverridden1"/>
+	  </navigatorContent>      
+
+      <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testContentOverridden1Plain" 
+            name="Test Content Overridden 1 (Red)"
+            contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderPlainRed"
+            priority="lower">
+         <triggerPoints>
+            <instanceof
+                  value="org.eclipse.core.resources.IResource">
+            </instanceof>
+         </triggerPoints>
+	  </navigatorContent>   
+	     
+      <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testContentOverride1Plain" 
+            name="Test Content Override 1 (Label only - Green)"
+            contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderPlainGreen"
+            priority="lower">
+         <triggerPoints>
+            <instanceof
+                  value="org.eclipse.core.resources.IResource">
+            </instanceof>
+         </triggerPoints>
+		<override suppressedExtensionId="org.eclipse.ui.tests.navigator.testContentOverridden1Plain"/>
 	  </navigatorContent>      
 
       <navigatorContent 
