--- a/org.eclipse.help.webapp/plugin.xml
+++ b/org.eclipse.help.webapp/plugin.xml
@@ -13,6 +13,7 @@
 <plugin>
    <extension-point id="contentFilter" name="Content Filter" schema="schema/contentFilter.exsd"/>
   <extension-point id="view" name="View" schema="schema/view.exsd"/>
+  <extension-point id="toolbarButton" name="Toolbar Button" schema="schema/toolbarButton.exsd"/>
    <extension
          point="org.eclipse.equinox.http.registry.httpcontexts">
       <httpcontext
