--- a/org.eclipse.debug.examples.ui/plugin.xml
+++ b/org.eclipse.debug.examples.ui/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?><!--
-     Copyright (c) 2005, 2008 IBM Corporation and others.
+     Copyright (c) 2005, 2009 IBM Corporation and others.
      All rights reserved. This program and the accompanying materials
      are made available under the terms of the Eclipse Public License v1.0
      which accompanies this distribution, and is available at
@@ -8,6 +8,7 @@
     
      Contributors:
          IBM Corporation - initial API and implementation
+         Patrick Chuong (Texas Instruments) - Checkbox support for Flexible Hierachy view (Bug 286310)
  -->
 
 <plugin>
@@ -125,6 +126,12 @@
             class="org.eclipse.debug.examples.ui.pda.views.DataStackView"
             name="PDA Data Stack"
             id="pda.dataStackView"/>
+      <view
+            class="org.eclipse.debug.examples.ui.pda.views.CheckboxView"
+            id="org.eclipse.debug.examples.ui.checkboxView"
+            name="Checkbox View"
+            restorable="true">
+      </view>
    </extension>
   
     <extension
@@ -275,7 +282,19 @@
          <adapter
                type="org.eclipse.debug.internal.ui.viewers.model.provisional.IElementLabelProvider">
          </adapter>
+         <adapter
+    	     type="org.eclipse.debug.internal.ui.viewers.model.provisional.IModelProxyFactory">
+   		</adapter>
       </factory>      
+      <factory
+            adaptableType="javax.sound.midi.Track"
+            class="org.eclipse.debug.examples.ui.midi.adapters.MidiAdapterFactory">
+         <adapter
+    	     type="org.eclipse.debug.internal.ui.viewers.model.provisional.IModelProxyFactory">
+   		</adapter>
+      </factory>
+      
+      
    </extension>
    <extension
          point="org.eclipse.debug.ui.detailPaneFactories">
