Added tests for extra view, button and frame.

--- a/org.eclipse.ua.tests/build.properties
+++ b/org.eclipse.ua.tests/build.properties
@@ -17,7 +17,9 @@ bin.includes = plugin.xml,\
                doc.zip,\
                about.html,\
                non_junit/,\
-               nl/
+               nl/,\
+               jsp/,\
+               script/
 jars.compile.order = ua-tests.jar
 output.ua-tests.jar = bin/
 source.ua-tests.jar = base/,\
