Bug 289225 - Add new debug test plug-in to automated build

--- a/org.eclipse.debug.tests/build.properties
+++ b/org.eclipse.debug.tests/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                test.xml,\
                about.html,\
-               plugin.properties
+               plugin.properties,\
+               plugin.xml
