Bug 289225 - Add new debug test plug-in to automated build * Moved Launch Configuration Tests to the platform

--- a/org.eclipse.debug.tests/plugin.xml
+++ b/org.eclipse.debug.tests/plugin.xml
@@ -54,4 +54,13 @@
       		</enablement>
       </renderingBindings>                  
    </extension>
+   <extension
+         point="org.eclipse.debug.core.launchConfigurationTypes">
+      <launchConfigurationType
+            delegate="org.eclipe.debug.tests.launching.TestLaunchDelegate"
+            id="org.eclipse.debug.tests.launch.type"
+            modes="run, debug"
+            name="Test Launch Type">
+      </launchConfigurationType>
+   </extension>
 </plugin>
