--- a/org.eclipse.debug.tests/build.properties
+++ b/org.eclipse.debug.tests/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                test.xml,\
                about.html,\
                plugin.properties,\
-               plugin.xml
+               plugin.xml,\
+               test-import/
