Bug 267130 -  [launching] ILaunchManager.generateUniqueLaunchConfigurationNameFrom -- either reject badly-named prefixes or fix them

--- a/org.eclipse.debug.core/core/org/eclipse/debug/internal/core/DebugCoreMessages.properties
+++ b/org.eclipse.debug.core/core/org/eclipse/debug/internal/core/DebugCoreMessages.properties
@@ -81,6 +81,8 @@ LaunchManager_29=Importing launch configurations
 # For example if we have a config named 'test' and we created a new one from test
 # we would get 'test (1)', where test is the basename, and 1 is the numerical modifier
 LaunchManager_31={0} ({1})
+LaunchManager_invalid_config_name=''{0}'' is an invalid configuration name
+LaunchManager_invalid_config_name_char=''{0}'' is an invalid character in a configuration name
 LaunchDelegate_0=No description provided.
 LaunchDelegate_1={0} Launcher
 LaunchDelegate_2={0} launcher
