--- a/bundles/org.eclipse.core.resources/plugin.properties
+++ b/bundles/org.eclipse.core.resources/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2007 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -19,6 +19,7 @@ teamHookName = Team Hook
 preferencesContentTypeName = Preferences
 refreshProvidersName=Refresh Providers
 modelProviders=Model Providers
+filters=Filters
 preferencesExtPtName=Resource Preferences
 resourceModelName=File System Resources
 
@@ -31,3 +32,6 @@ textName = Text
 win32FragmentName = Core Resource Management Win32 Fragment
 compatibilityFragmentName = Core Resource Management Compatibility Fragment
 win32MonitorFactoryName = Windows Auto-refresh monitor
+
+regexFilterProvider.description = Matches objects based on regular expression as defined by the java.util.regex.Pattern class
+regexFilterProvider.name = Regular Expression
