Bug 291534 - Migrate resource refreshing support to headless plug-in

--- a/org.eclipse.debug.core/plugin.xml
+++ b/org.eclipse.debug.core/plugin.xml
@@ -222,6 +222,11 @@
             class="org.eclipse.debug.internal.core.sourcelookup.SourceLocatorMementoComparator"
             id="org.eclipse.debug.core.sourceLocatorMementoComparator">
       </launchConfigurationComparator>
+      <launchConfigurationComparator
+            attribute="org.eclipse.debug.core.ATTR_REFRESH_SCOPE"
+            class="org.eclipse.debug.internal.core.RefreshScopeComparator"
+            id="org.eclipse.debug.core.comparator.refresh.scope">
+      </launchConfigurationComparator>
    </extension>
    <extension
          point="org.eclipse.core.runtime.preferences">
