--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/stringsubstitution/StringSubstitutionMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/stringsubstitution/StringSubstitutionMessages.properties
@@ -14,6 +14,7 @@ PromptExpanderBase_1=Please input a value
 PromptingResolver_0=Failed to expand {0}. Input was cancelled.
 
 RefreshTab_0=Recursively &include sub-folders
+RefreshTab_1=Working set
 RefreshTab_6=Refresh
 RefreshTab_7=Refresh resources...
 RefreshTab_8=Exception(s) occurred during refresh.
@@ -26,7 +27,6 @@ RefreshTab_36=&Specific resources
 RefreshTab_37=Specify &Resources...
 RefreshTab_40=working set
 RefreshTab_42=Must select resources to refresh.
-RefreshTab_43=Refresh scope refers to non-existent resource {0}
 RefreshTab_44=Refresh scope invalid
 
 ResourceSelector_0=Select Resource
