--- a/org.eclipse.debug.core/core/org/eclipse/debug/internal/core/DebugCoreMessages.properties
+++ b/org.eclipse.debug.core/core/org/eclipse/debug/internal/core/DebugCoreMessages.properties
@@ -100,3 +100,7 @@ RuntimeProcess_Exit_value_not_available_until_process_terminates__1=Exit value n
 LaunchConfigurationType_7=Launch mode not supported: {0}
 WatchExpression_0=(Watch expressions not supported)
 NullStreamsProxy_0=Null Stream Monitor
+RefreshingResources=Refresh resources...
+RefreshingResourcesError=Exception(s) occurred during refresh.
+RefreshUtil_0=Unable to restore resource memento: {0}
+RefreshUtil_1=Refresh scope refers to non-existent resource {0}
