Bug# 206403: [Progress] IProgressConstants.ACTION_PROPERTY should be commands based

--- a/tests/org.eclipse.ui.tests/plugin.xml
+++ b/tests/org.eclipse.ui.tests/plugin.xml
@@ -4215,6 +4215,10 @@
                   id="org.eclipse.ui.commands.radioState">
             </state>
          </command>
+         <command
+               id="org.eclipse.ui.tests.progressViewCommand"
+               name="Progress View Command">
+         </command>
       </extension>
    <extension id="rcpSessionApplication" point="org.eclipse.core.runtime.applications">
 	   <application cardinality="singleton-global" thread="main" visible="true">
