--- a/ant/org.eclipse.ant.launching/.settings/org.eclipse.jdt.core.prefs
+++ b/ant/org.eclipse.ant.launching/.settings/org.eclipse.jdt.core.prefs
@@ -1,6 +1,6 @@
-#Wed Sep 16 09:44:05 CDT 2009
+#Sun Sep 20 13:08:07 CEST 2009
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=disabled
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.2
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
 org.eclipse.jdt.core.compiler.compliance=1.4
