--- a/ant/org.eclipse.ant.ui/build.properties
+++ b/ant/org.eclipse.ant.ui/build.properties
@@ -11,11 +11,9 @@
 source.. = Ant Tools Support/,\
                    Ant Editor/
 
-source.lib/antrunner.jar = Ant Runner Support/,\
-                           Common Ant Support/
+source.lib/antrunner.jar = Ant Runner Support/
 
-source.lib/remoteAnt.jar = Remote Ant Support/,\
-                           Common Ant Support/
+source.lib/remoteAnt.jar = Remote Ant Support/
 
 src.includes = about.html,\
                about_files/
@@ -31,7 +29,5 @@ bin.includes = icons/,\
                about_files/
 				
 jars.compile.order=.,lib/antrunner.jar,lib/remoteAnt.jar
-output.lib/antrunner.jar = ant_runner_support_bin/,\
-                           common_ant_support_bin/
-output.lib/remoteAnt.jar = common_ant_support_bin/,\
-                           remote_support_bin/
+output.lib/antrunner.jar = ant_runner_support_bin/
+output.lib/remoteAnt.jar = remote_support_bin/
