Bug 281146 – [Help][Index] See references added to the keyword index:

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -156,6 +156,8 @@ IndexTypeinButton=Display
 IndexEmpty=There are no entries in the index.
 IndexPrevious=<< Previous
 IndexNext=Next >>
+See=see {0}
+SeeAlso=see also {0}
 
 # About page
 provider=Provider
