Bug 281145  [CheatSheet] Simple mechanism to publish internal resources of cheatsheet plugin via http urls:

--- a/bundles/org.eclipse.ui.browser/plugin.properties
+++ b/bundles/org.eclipse.ui.browser/plugin.properties
@@ -26,6 +26,11 @@ commandParameter.openBrowser.browserId.name=Browser Id
 commandParameter.openBrowser.name.name=Browser Name
 commandParameter.openBrowser.tooltip.name=Browser Tooltip
 
+command.openBundleResource.name=Open Resource in Browser
+command.openBundleResource.description=Opens a bundle resource in the default web browser.
+commandParameter.openBundleResource.plugin.name=Plugin
+commandParameter.openBundleResource.path.name=Path
+
 browserInternetExplorer=Internet Explorer
 browserNetscape4=Netscape Communicator v4.x
 browserNetscape7=Netscape v7.x
