Bug 292143 - update new bundles to include about.html files

--- a/ant/org.eclipse.ant.launching/build.properties
+++ b/ant/org.eclipse.ant.launching/build.properties
@@ -16,7 +16,8 @@ bin.includes = META-INF/,\
                plugin.properties,\
                lib/antdebug.jar,\
                lib/loggers.jar,\
-               lib/remote.jar
+               lib/remote.jar,\
+               about.html
 
 jars.compile.order = .,\
 				                     lib/antdebug.jar,\
