--- a/org.eclipse.ua.tests/plugin.xml
+++ b/org.eclipse.ua.tests/plugin.xml
@@ -556,5 +556,26 @@
             class="org.eclipse.ua.tests.help.webextension.TestFrame">
       </frame>
    </extension>
+   <extension
+         point="org.eclipse.equinox.http.registry.httpcontexts">
+      <httpcontext
+            id="uaTest">
+         <resource-mapping
+               path="/">
+         </resource-mapping>
+      </httpcontext>
+   </extension>
+   <extension
+         point="org.eclipse.equinox.http.registry.servlets">
+      <servlet
+            alias="/search"
+            class="org.eclipse.ua.tests.help.remote.MockSearchServlet"
+            httpcontextId="uaTest">
+      </servlet>
+      
+      <serviceSelector
+            filter="(other.info=org.eclipse.ua.tests)">
+      </serviceSelector>
+   </extension>
 
 </plugin>
