--- a/org.eclipse.debug.core/core/org/eclipse/debug/internal/core/DebugCoreMessages.properties
+++ b/org.eclipse.debug.core/core/org/eclipse/debug/internal/core/DebugCoreMessages.properties
@@ -97,6 +97,8 @@ OutputStreamMonitor_label=Output Stream Monitor
 ProcessMonitorJob_0=Process monitor
 RuntimeProcess_terminate_failed=Terminate failed
 RuntimeProcess_Exit_value_not_available_until_process_terminates__1=Exit value not available until process terminates.
+LaunchConfigurationType_0=Error retrieving template
+LaunchConfigurationType_1=Error setting template
 LaunchConfigurationType_7=Launch mode not supported: {0}
 WatchExpression_0=(Watch expressions not supported)
 NullStreamsProxy_0=Null Stream Monitor
