292289 - Merge Resource Filters UI from the e4 branch to HEAD

--- a/bundles/org.eclipse.ui.ide/plugin.properties
+++ b/bundles/org.eclipse.ui.ide/plugin.properties
@@ -62,6 +62,7 @@ PreferencePages.Decorators = Label Decorations
 PreferencePages.NewKeys = Keys
 PreferencePages.ContentTypes = Content Types
 PropertyPages.project.reference = Project References
+PropertyPages.resource.filters = Resource Filters
 PropertyPages.info.file = Resource
 
 Views.ResourceNavigator = Navigator
@@ -94,6 +95,8 @@ DecoratorLinkedResource.label = Linked Resources
 DecoratorLinkedResource.description = Adds an icon decoration to linked resources.
 DecoratorSpecificContentType.label = File Icons Based On Content Analysis
 DecoratorSpecificContentType.description = Displays an icon based on the examination of the contents of a file. This yields a more precise answer than one derived simply from the file name.
+DecoratorSpecificResourceFilterType.label = Containers With Resource filters.
+DecoratorSpecificResourceFilterType.description = Displays an icon based on the presence of resource filters on a container.
 OpenWorkspaceFileAction.label = Open Reso&urce...
 SelectWorkingSetsAction.label = &Working Sets
 SelectWorkingSetsAction.tooltip = Modify workbench working sets
@@ -282,4 +285,14 @@ menu.mnemonic.0 = I
 menu.showIn.label = Show In
 menu.showIn.mnemonic = I
 
+linked_resources = Linked Resources
+
+filterProvider.description = * = any string, ? = any character, \\ = escape literals: * ? \\
+filterProvider.name = String Matcher
+orFilterProvider.name = OR group
+orFilterProvider.description = Allows grouping others filters with the OR logical preposition
+andFilterProvider.name = AND group
+andFilterProvider.description = Allows grouping others filters with the AND logical preposition
+notFilterProvider.name = NOT group
+notFilterProvider.description = Allows grouping others filters with the NOT logical preposition
 installationPage.feature.name = Features
