--- a/org.eclipse.help.ui/plugin.properties
+++ b/org.eclipse.help.ui/plugin.properties
@@ -47,3 +47,8 @@ command.closeTray.description = Close the user assistance tray containing contex
 
 command.index.description = Show Keyword Index
 command.index.name = Index
+ 
+command.openBundleResource.name=Open Resource in Browser
+command.openBundleResource.description=Opens a bundle resource in the default web browser.
+commandParameter.openBundleResource.plugin.name=Plugin
+commandParameter.openBundleResource.path.name=Path
