bug 219570: [Sync View] "Link with Editor" for Synchronize view

--- a/bundles/org.eclipse.team.ui/plugin.xml
+++ b/bundles/org.eclipse.team.ui/plugin.xml
@@ -293,6 +293,9 @@
          <showInPart
                id="org.eclipse.team.ui.GenericHistoryView">
          </showInPart>
+         <showInPart
+               id="org.eclipse.team.sync.views.SynchronizeView">
+         </showInPart>
       </perspectiveExtension>
    </extension>
 <!-- ***************** Actions ********************** -->
