Fix for Bug 292525 - [Markers] Code clean up in markers view. - (Patch v01)

--- a/bundles/org.eclipse.ui.ide/plugin.xml
+++ b/bundles/org.eclipse.ui.ide/plugin.xml
@@ -1708,12 +1708,16 @@
                
              </visibleWhen>
          </command>
+         <separator 
+               name="additions"
+               visible="true" >
+         </separator>
       </menuContribution>
   
     
       <menuContribution
             locationURI="menu:org.eclipse.ui.views.ProblemView">
-         <menu
+         <menu 
                id="org.eclipse.ui.ide.problems.filtersMenu"
                label="%MarkerFiltersMenu.Show">
             <dynamic
