Bug 41353 - [launching] Launch config templates

--- a/org.eclipse.debug.core/core/org/eclipse/debug/internal/core/DebugCoreMessages.properties
+++ b/org.eclipse.debug.core/core/org/eclipse/debug/internal/core/DebugCoreMessages.properties
@@ -65,6 +65,7 @@ LaunchConfigurationWorkingCopy_1=Writing local file
 LaunchConfigurationWorkingCopy_2=Creating new file {0}.launch in workspace
 LaunchConfigurationWorkingCopy_3=Setting contents of {0}.launch
 LaunchConfigurationWorkingCopy_4=Unable to obtain storage to write launch configuration
+LaunchConfigurationWorkingCopy_6=Template cannot be a working copy.
 LaunchManager__0__occurred_while_reading_launch_configuration_file__1___1={0} occurred while reading launch configuration file: {1}.
 LaunchManager_Invalid_launch_configuration_index__18=Invalid launch configuration index.
 LaunchManager_does_not_exist=Launch configuration {0} at {1} does not exist.
