--- a/bundles/org.eclipse.core.resources/plugin.properties
+++ b/bundles/org.eclipse.core.resources/plugin.properties
@@ -33,5 +33,5 @@ win32FragmentName = Core Resource Management Win32 Fragment
 compatibilityFragmentName = Core Resource Management Compatibility Fragment
 win32MonitorFactoryName = Windows Auto-refresh monitor
 
-regexFilterProvider.description = Matches objects based on regular expression as defined by the java.util.regex.Pattern class
+regexFilterProvider.description = Matches objects based on a regular expression
 regexFilterProvider.name = Regular Expression
