Fixed bug 144422: [encoding] Save problems dialog not useful when problems with encodings are encountered

--- a/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/TextEditorMessages.properties
+++ b/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/TextEditorMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2007 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -32,6 +32,8 @@ AbstractDecoratedTextEditor_revision_quickdiff_switch_rememberquestion=Remember 
 AbstractDecoratedTextEditor_revision_colors_option_by_author_and_date=Combined &Coloring
 AbstractDecoratedTextEditor_error_saveAs_title=Problems During Save As...
 AbstractDecoratedTextEditor_error_saveAs_message=Save could not be completed. {0}
+AbstractDecoratedTextEditor_save_error_Dialog_button_saveAsUTF8= "&Save as UTF-8"
+AbstractDecoratedTextEditor_save_error_Dialog_button_selectUnmappable= "Select First &Unmappable Character"
 AbstractDecoratedTextEditor_saveAs_overwrite_title=Save As
 AbstractDecoratedTextEditor_saveAs_overwrite_message={0} already exists.\nDo you want to replace it?
 AbstractDecoratedTextEditor_warning_saveAs_deleted=The original file ''{0}'' has been deleted or is not accessible.
