--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -109,8 +109,21 @@ yes=Yes
 no=No
 dontask=Do &not warn me again
 
-# Remote help error dialog
-remoteHelpErrorMessage=There was a problem communicating with the remote help server. Some topics\nmay not be available.\n\nPlease check your network connection and remote help server preferences.
+# Remote help status page
+remoteStatusTitle=Network Help Status - Eclipse SDK
+noRemoteSitesToQuery=There are no remote sites to query for status.
+sitesWithConnectivity=Available Sites
+sitesWithoutConnectivity=Unavailable Sites
+noRemoteSitesAvailable=<em>Note: </em>Eclipse can not connect to any of your enabled remote sites.
+allRemoteHelpUnavailable=Network Help Unavailable
+someRemoteHelpUnavailable=Some Network Help Unavailable
+topicUnavailable=The topic that you have requested is not available.
+potentialCauses=This condition may be caused by one of the following:
+serversCouldBeDown=The remote server(s) could be down.
+networkCouldBeDown=Your machine may have lost network connectivity.
+mayNeedProxy=You may need to configure proxy settings to access a remote server.
+remotePreferences=To view, edit, and test Network Infocenter settings, open {0}.
+remotePreferencesMenuSelect=Window &gt Preferences &gt Help &gt Content
 
 # Frame Titles 
 ignore=Layout frame: {0}
