Bug# 275126: [Contributions] The label of a UIElement cannot be reset when a command handler gets disabled

--- a/tests/org.eclipse.ui.tests/plugin.xml
+++ b/tests/org.eclipse.ui.tests/plugin.xml
@@ -4131,6 +4131,14 @@
                id="popup:org.eclipse.ui.tests.dynamicMenuContribution">
          </dynamic>
       </menuContribution>
+      <menuContribution
+            locationURI="menu:org.eclipse.ui.tests.Bug275126">
+         <command
+               commandId="tests.commands.CCT.cmd1"
+               label="Contributed Label"
+               style="push">
+         </command>
+      </menuContribution>
    </extension>
    <extension
          point="org.eclipse.ui.bindings">
