Committed Deepak's patch to fix bug 277684: [preferences] Add comment to pref page that changing quick diff provider does not update open editors

--- a/org.eclipse.ui.editors/src/org/eclipse/ui/internal/editors/text/TextEditorMessages.properties
+++ b/org.eclipse.ui.editors/src/org/eclipse/ui/internal/editors/text/TextEditorMessages.properties
@@ -57,6 +57,8 @@ TextEditorPreferencePage_showAffordance= S&how affordance in hover on how to mak
 
 QuickDiffConfigurationBlock_description= General Quick Diff settings.
 QuickDiffConfigurationBlock_referenceProviderTitle= &Use this reference source:
+QuickDiffConfigurationBlock_referenceProviderNoteMessage= Changing the reference source does not update open editors.
+QuickDiffConfigurationBlock_referenceProviderNoteTitle= Note:
 QuickDiffConfigurationBlock_characterMode= &Use characters to show changes in vertical ruler
 QuickDiffConfigurationBlock_showForNewEditors= &Enable quick diff
 QuickDiffConfigurationBlock_showInOverviewRuler= Show differences in &overview ruler
