Bug 293202 - [Webapp] Error building in workspace - unknown type org.eclipse.ant.ui.classpathentry.antHome

--- a/ant/org.eclipse.ant.launching/plugin.xml
+++ b/ant/org.eclipse.ant.launching/plugin.xml
@@ -42,7 +42,7 @@
          point="org.eclipse.jdt.launching.runtimeClasspathEntries">
       <runtimeClasspathEntry
             class="org.eclipse.ant.internal.launching.launchConfigurations.AntHomeClasspathEntry"
-            id="org.eclipse.antui.classpathentry.antHome">
+            id="org.eclipse.ant.ui.classpathentry.antHome">
       </runtimeClasspathEntry>
       <runtimeClasspathEntry
             class="org.eclipse.ant.internal.launching.launchConfigurations.ContributedClasspathEntriesEntry"
