--- a/bundles/org.eclipse.ui.browser/plugin.xml
+++ b/bundles/org.eclipse.ui.browser/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?><!--
-     Copyright (c) 2005, 2008 IBM Corporation and others.
+     Copyright (c) 2005, 2009 IBM Corporation and others.
      All rights reserved. This program and the accompanying materials
      are made available under the terms of the Eclipse Public License v1.0
      which accompanies this distribution, and is available at
@@ -8,6 +8,7 @@
     
      Contributors:
          IBM Corporation - initial API and implementation
+          Martin Oberhuber (Wind River) - [292882] Default Browser on Solaris
  -->
 
 <plugin>
@@ -89,6 +90,7 @@
          factoryclass="org.eclipse.ui.internal.browser.browsers.MozillaFactory">
          <location>usr/bin/mozilla</location>
          <location>usr/X11/bin/mozilla</location>
+         <location>usr/sfw/lib/mozilla/mozilla</location>
       </browser>
       <browser
          id="org.eclipse.ui.browser.netscape"
