bug 293555 - Disable Resource Filter decorator by default until new icon is available

--- a/bundles/org.eclipse.ui.ide/plugin.properties
+++ b/bundles/org.eclipse.ui.ide/plugin.properties
@@ -95,7 +95,7 @@ DecoratorLinkedResource.label = Linked Resources
 DecoratorLinkedResource.description = Adds an icon decoration to linked resources.
 DecoratorSpecificContentType.label = File Icons Based On Content Analysis
 DecoratorSpecificContentType.description = Displays an icon based on the examination of the contents of a file. This yields a more precise answer than one derived simply from the file name.
-DecoratorSpecificResourceFilterType.label = Containers With Resource filters.
+DecoratorSpecificResourceFilterType.label = Containers with Resource Filters
 DecoratorSpecificResourceFilterType.description = Displays an icon based on the presence of resource filters on a container.
 OpenWorkspaceFileAction.label = Open Reso&urce...
 SelectWorkingSetsAction.label = &Working Sets
