--- a/bundles/org.eclipse.ui.ide/plugin.xml
+++ b/bundles/org.eclipse.ui.ide/plugin.xml
@@ -372,7 +372,7 @@
             label="%DecoratorSpecificResourceFilterType.label"
             lightweight="true"
             location="BOTTOM_LEFT"
-            state="true">
+            state="false">
          <description>
             %DecoratorSpecificResourceFilterType.description
          </description>
