--- a/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/TextEditorMessages.properties
+++ b/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/TextEditorMessages.properties
@@ -32,8 +32,8 @@ AbstractDecoratedTextEditor_revision_quickdiff_switch_rememberquestion=Remember 
 AbstractDecoratedTextEditor_revision_colors_option_by_author_and_date=Combined &Coloring
 AbstractDecoratedTextEditor_error_saveAs_title=Problems During Save As...
 AbstractDecoratedTextEditor_error_saveAs_message=Save could not be completed. {0}
-AbstractDecoratedTextEditor_save_error_Dialog_button_saveAsUTF8= "&Save as UTF-8"
-AbstractDecoratedTextEditor_save_error_Dialog_button_selectUnmappable= "Select First &Unmappable Character"
+AbstractDecoratedTextEditor_save_error_Dialog_button_saveAsUTF8= &Save as UTF-8
+AbstractDecoratedTextEditor_save_error_Dialog_button_selectUnmappable= Select &First Character
 AbstractDecoratedTextEditor_saveAs_overwrite_title=Save As
 AbstractDecoratedTextEditor_saveAs_overwrite_message={0} already exists.\nDo you want to replace it?
 AbstractDecoratedTextEditor_warning_saveAs_deleted=The original file ''{0}'' has been deleted or is not accessible.
