--- a/org.eclipse.ltk.ui.refactoring/src/org/eclipse/ltk/internal/ui/refactoring/RefactoringUIMessages.properties
+++ b/org.eclipse.ltk.ui.refactoring/src/org/eclipse/ltk/internal/ui/refactoring/RefactoringUIMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -189,7 +189,10 @@ RefactoringPropertyPage_confirm_delete_all_caption=Confirm History Delete
 RefactoringPropertyPage_confirm_delete_all_pattern=Are you sure you want to delete the refactoring history of project ''{0}''?\n\nNote: This will only delete refactorings exclusively associated with ''{0}''.
 RefactoringPropertyPage_sharing_refactoring_history=Sharing refactoring history...
 RefactoringPropertyPage_confirm_delete_caption=Confirm Refactoring Delete
-RefactoringPropertyPage_confirm_delete_pattern=Are you sure you want to delete {0} refactoring(s) from the refactoring history of project ''{1}''?\n\nNote: This may also affect refactoring histories of other projects.
+RefactoringPropertyPage_confirm_delete_pattern_singular=Are you sure you want to delete the refactoring from the refactoring history of project ''{1}''?\n\nNote: This may also affect refactoring histories of other projects.
+RefactoringPropertyPage_confirm_delete_pattern_plural=Are you sure you want to delete {0} refactorings from the refactoring history of project ''{1}''?\n\nNote: This may also affect refactoring histories of other projects.
+RefactoringDescriptorDeleteQuery_confirm_deletion_singular=Are you sure you want to delete the refactoring from the workspace refactoring history?\n\nNote: This may also affect refactoring histories of projects.
+RefactoringDescriptorDeleteQuery_confirm_deletion_plural=Are you sure you want to delete {0} refactorings from the workspace refactoring history?\n\nNote: This may also affect refactoring histories of projects.
 RefactoringPropertyPage_unsharing_refactoring_history=Unsharing refactoring history...
 RefactoringPropertyPage_edit_caption=Edit Details
 RefactoringPropertyPage_edit_message=Details of refactoring ''{0}'':
