--- a/org.eclipse.debug.tests/plugin.xml
+++ b/org.eclipse.debug.tests/plugin.xml
@@ -73,5 +73,14 @@
               class="org.eclipe.debug.tests.launching.DebugFileSystem">
         </run>
      </filesystem>
+   </extension>
+   <extension
+         point="org.eclipse.debug.core.statusHandlers">
+      <statusHandler
+            class="org.eclipse.debug.tests.statushandlers.StatusHandler"
+            code="333"
+            id="org.eclipse.debug.tests.statusHandler"
+            plugin="org.eclipse.debug.tests">
+      </statusHandler>
    </extension>   
 </plugin>
