--- a/tests/org.eclipse.e4.core.tests.services/build.properties
+++ b/tests/org.eclipse.e4.core.tests.services/build.properties
@@ -1,6 +1,5 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               test.xml,\
-               OSGI-INF/
+               test.xml
 source.. = src/
